--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Second Brain - Document Q&A</title>
-  </head>
-  <body>
+    
+    <title>Prosey | Your Personal Second Brain & Digital Garden</title>
+    <meta name="description" content="Prosey is a curated second brain for capturing ideas, connecting notes, and cultivating long-term knowledge. Explore my digital garden of insights.">
+    <link rel="canonical" href="https://prosey.com/" />
+
+    <meta property="og:title" content="Prosey: A Second Brain for Deep Thinkers">
+    <meta property="og:description" content="Connecting the dots between ideas. Explore my notes and mental models.">
+    <meta property="og:url" content="https://prosey.com/">
+    <meta property="og:type" content="website">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Prosey",
+      "alternateName": "Prosey Second Brain",
+      "description": "A personal knowledge management system and digital garden.",
+      "url": "https://prosey.com",
+      "author": {
+        "@type": "Person",
+        "name": "Your Name"
+      }
+    }
+    </script>
+</head>
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
