--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     
-    <title>Prosey | Your Personal Second Brain & Digital Garden</title>
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+    
+    <title>Prosey: Your Second Brain and Digital Garden</title>
     <meta name="description" content="Prosey is a curated second brain for capturing ideas, connecting notes, and cultivating long-term knowledge. Explore my digital garden of insights.">
     <link rel="canonical" href="https://prosey.com/" />
 
-    <meta property="og:title" content="Prosey: A Second Brain for Deep Thinkers">
-    <meta property="og:description" content="Connecting the dots between ideas. Explore my notes and mental models.">
-    <meta property="og:url" content="https://prosey.com/">
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prosey.com/">
+    <meta property="og:title" content="Prosey: Your Second Brain and Digital Garden">
+    <meta property="og:description" content="Connecting the dots between ideas. Explore my notes and mental models.">
+    <meta property="og:image" content="https://prosey.com/logo.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://prosey.com/">
+    <meta name="twitter:title" content="Prosey: Your Second Brain and Digital Garden">
+    <meta name="twitter:description" content="Connecting the dots between ideas. Explore my notes and mental models.">
+    <meta name="twitter:image" content="https://prosey.com/logo.png">
 
     <script type="application/ld+json">
     {
@@ -21,10 +35,10 @@
       "name": "Prosey",
       "alternateName": "Prosey Second Brain",
       "description": "A personal knowledge management system and digital garden.",
-      "url": "https://prosey.com",
+      "url": "https://prosey.ai",
       "author": {
         "@type": "Person",
-        "name": "Your Name"
+        "name": "Alex Isaacs"
       }
     }
     </script>
