--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     
     <title>Prosey | Your Second Brain and Digital Garden</title>
-    <meta name="description" content="Prosey is a curated second brain for capturing ideas, connecting notes, and cultivating long-term knowledge. Explore my digital garden of insights.">
+    <meta name="description" content="Prosey is a curated second brain for capturing ideas, connecting notes, and cultivating long-term knowledge. Explore your digital garden of insights.">
     
     <link rel="canonical" href="https://prosey.ai/" />
 
