--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://prosey.ai/">
-    <meta property="og:title" content="Prosey: Your Second Brain and Digital Garden">
+    <meta property="og:site_name" content="Prosey">
+    <meta property="og:title" content="Prosey | Your Second Brain and Digital Garden">
     <meta property="og:description" content="Connecting the dots between ideas. Explore my notes and mental models.">
     <meta property="og:image" content="https://prosey.ai/logo.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://prosey.ai/">
-    <meta name="twitter:title" content="Prosey: Your Second Brain and Digital Garden">
+    <meta name="twitter:title" content="Prosey | Your Second Brain and Digital Garden">
     <meta name="twitter:description" content="Connecting the dots between ideas. Explore my notes and mental models.">
     <meta name="twitter:image" content="https://prosey.ai/logo.png">
 
