--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="application-name" content="Prosey">
     
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="shortcut icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/logo.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     
     <title>Prosey | Your Second Brain and Digital Garden</title>
     <meta name="description" content="Prosey is your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
@@ -21,23 +21,25 @@
     <meta property="og:site_name" content="Prosey">
     <meta property="og:title" content="Prosey | Your Second Brain and Digital Garden">
     <meta property="og:description" content="Your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
-    <meta property="og:image" content="https://prosey.ai/logo.svg">
+    <meta property="og:image" content="https://prosey.ai/logo.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://prosey.ai/">
     <meta name="twitter:title" content="Prosey | Your Second Brain and Digital Garden">
     <meta name="twitter:description" content="Your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
-    <meta name="twitter:image" content="https://prosey.ai/logo.svg">
+    <meta name="twitter:image" content="https://prosey.ai/logo.png">
 
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebSite",
+      "@type": "Organization",
       "name": "Prosey",
-      "alternateName": "Prosey Second Brain",
-      "description": "A secure personal knowledge management system with end-to-end encryption. Your documents are encrypted before storage, ensuring complete privacy and security.",
+      "legalName": "Prosey, Inc.",
       "url": "https://prosey.ai",
-      "author": {
+      "logo": "https://prosey.ai/logo.png",
+      "description": "Your secure second brain with end-to-end encryption",
+      "foundingDate": "2024",
+      "founder": {
         "@type": "Person",
         "name": "Alex Isaacs"
       }
@@ -52,6 +54,7 @@
 
       gtag('config', 'G-9TWTH7646V');
     </script>
+    <meta name="msvalidate.01" content="43FAC7945B1F6B0176D21C64A97B52CC" />
 </head>
 <body>
     <div id="root"></div>
