--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="application-name" content="Prosey">
     
-    <!-- Favicons - corrected types -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
-    <link rel="shortcut icon" href="/logo.png" />
+    <!-- Favicons - using absolute URLs for consistency -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://prosey.ai/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://prosey.ai/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://prosey.ai/logo.png" />
+    <link rel="shortcut icon" href="https://prosey.ai/logo.png" />
     
     <title>Prosey | Your Second Brain and Digital Garden</title>
     <meta name="description" content="Prosey is your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
