--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="application-name" content="Prosey">
     
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <link rel="shortcut icon" type="image/png" href="/logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+    <!-- Favicons - using absolute URLs for consistency -->
+    <link rel="icon" type="image/png" href="https://prosey.ai/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="https://prosey.ai/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://prosey.ai/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://prosey.ai/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://prosey.ai/logo.png" />
     
     <title>Prosey | Your Second Brain and Digital Garden</title>
     <meta name="description" content="Prosey is your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
@@ -19,8 +20,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://prosey.ai/">
     <meta property="og:site_name" content="Prosey">
-    <meta property="og:title" content="Prosey | Your Second Brain and Digital Garden">
-    <meta property="og:description" content="Your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
+    <meta property="og:title" content="Prosey: The Encrypted AI Archive for Your Product Docs & Files">
+    <meta property="og:description" content="Stop searching, start asking. Prosey creates a secure, searchable collection of your spreadsheets, links, and documents. Ask your personal AI questions to instantly find specific details buried in months of documentation—all protected by end-to-end encryption.">
     <meta property="og:image" content="https://prosey.ai/logo.png">
 
     <meta name="twitter:card" content="summary_large_image">
