--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://prosey.ai/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://prosey.ai/logo.png" />
     
-    <title>Prosey | Your Second Brain and Digital Garden</title>
-    <meta name="description" content="Prosey is your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
+    <title>Prosey: The Encrypted AI Archive for Your Product Docs & Files</title>
+    <meta name="description" content="Stop searching, start asking. Prosey creates a secure, searchable collection of your spreadsheets, links, and documents. Ask your personal AI questions to instantly find specific details buried in months of documentation—all protected by end-to-end encryption.">
     
     <link rel="canonical" href="https://prosey.ai/" />
 
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://prosey.ai/">
     <meta name="twitter:title" content="Prosey | Your Second Brain and Digital Garden">
-    <meta name="twitter:description" content="Your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
+    <meta name="twitter:description" content="Stop searching, start asking. Prosey creates a secure, searchable collection of your spreadsheets, links, and documents. Ask your personal AI questions to instantly find specific details buried in months of documentation—all protected by end-to-end encryption.">
     <meta name="twitter:image" content="https://prosey.ai/logo.png">
 
     <script type="application/ld+json">
