--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://prosey.ai/logo.png" />
     <link rel="shortcut icon" href="https://prosey.ai/logo.png" />
     
-    <title>Prosey | Your Second Brain and Digital Garden</title>
-    <meta name="description" content="Prosey is your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
+    <title>Prosey: The Encrypted AI Archive for Your Product Docs & Files</title>
+    <meta name="description" content="Stop searching, start asking. Prosey creates a secure, searchable collection of your spreadsheets, links, and documents. Ask your personal AI questions to instantly find specific details buried in months of documentation—all protected by end-to-end encryption.">
     
     <link rel="canonical" href="https://prosey.ai/" />
 
@@ -20,8 +20,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://prosey.ai/">
     <meta property="og:site_name" content="Prosey">
-    <meta property="og:title" content="Prosey | Your Second Brain and Digital Garden">
-    <meta property="og:description" content="Your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
+    <meta property="og:title" content="Prosey: The Encrypted AI Archive for Your Product Docs & Files">
+    <meta property="og:description" content="Stop searching, start asking. Prosey creates a secure, searchable collection of your spreadsheets, links, and documents. Ask your personal AI questions to instantly find specific details buried in months of documentation—all protected by end-to-end encryption.">
     <meta property="og:image" content="https://prosey.ai/logo.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -31,8 +31,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://prosey.ai/">
-    <meta name="twitter:title" content="Prosey | Your Second Brain and Digital Garden">
-    <meta name="twitter:description" content="Your secure second brain with end-to-end encryption. Capture ideas, connect notes, and cultivate knowledge with complete privacy. Your documents are encrypted before storage, ensuring only you can access your content.">
+    <meta name="twitter:title" content="Prosey: The Encrypted AI Archive for Your Product Docs & Files">
+    <meta name="twitter:description" content="Stop searching, start asking. Prosey creates a secure, searchable collection of your spreadsheets, links, and documents. Ask your personal AI questions to instantly find specific details buried in months of documentation—all protected by end-to-end encryption.">
     <meta name="twitter:image" content="https://prosey.ai/logo.png">
 
     <!-- Structured Data - Fixed JSON syntax error -->
@@ -43,7 +43,7 @@
       "name": "Prosey",
       "url": "https://prosey.ai",
       "logo": "https://prosey.ai/logo.png",
-      "description": "Your secure second brain with end-to-end encryption",
+      "description": "Prosey: The Encrypted AI Archive for Your Product Docs & Files",
       "foundingDate": "2024",
       "founder": {
         "@type": "Person",
